--- a/websy-app/pom.xml
+++ b/websy-app/pom.xml
@@ -25,10 +25,9 @@
 			<type>zip</type>
 		</dependency>
 
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter</artifactId>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
 		<dependency>
@@ -44,7 +43,8 @@
 		</dependency>
 	</dependencies>
 
-	<build>
+	<build>    
+		<finalName>websy}</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
