--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	<packaging>pom</packaging>
 
 	<name>websy</name>
-	<description>Demo project for Spring Boot teraz master</description>
+	<description>Demo project for Spring Boot test</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
